Fix image alignment CSS.

--- a/css/creative.css
+++ b/css/creative.css
@@ -443,3 +443,8 @@ body {
 ul {
   list-style-type: none;
 }
+
+.img-responsive {
+  text-align: center;
+  margin: auto;
+}
